--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -15,6 +15,7 @@
   <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700" rel="stylesheet" />
   <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
   <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
   <link rel="canonical" href="{{ .Permalink }}" />
   <!-- main styles-->
