--- a/src/layouts/404.pug
+++ b/src/layouts/404.pug
@@ -1,5 +1,7 @@
-include  partials/head
-body
+doctype html
+html(lang='en')
+  | !{'{{ partial "head" . }}'}
+  body
     include partials/navbar.pug
     .main
         .container
