--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -1,43 +1,45 @@
-include  ../partials/head
-body
-    include ../partials/navbar.pug
-    .main.docs
-        .container
-            .row
-                .col-sm-3.col-md-3
-                    ul.sidebar-menu
-                        | !{'{{ $currentPage := . }}'}
-                        | !{'{{ range .Site.Menus.docs }}'}
-                        | !{'{{ if .HasChildren }}'}
-                        li.sidebar-menu-item
-                            h3 #{'{{.Name}}'}
-                            ul.sidebar-menu-sub
-                                | !{'{{range .Children}}'}
-                                | !{'{{ $has := $currentPage.IsMenuCurrent "docs" . }}'}
-                                li.sidebar-menu-sub-item(class='{{if $has}}active{{end}}')
-                                    a(href="{{.URL}}") #{'{{.Name}}'}
-                                | !{'{{if $has}}'}
-                                .side-bar-menu-toc
-                                    span #{'{{ $currentPage.TableOfContents}}'}
-                                | !{'{{end}}'}
-                                | !{'{{end}}'}
-                        | !{'{{else}}'}
-                        li.sidebar-menu-item
-                            h3 #{'{{.Name}}'}
-                        | !{'{{end}}'}
-                        | !{'{{end}}'}
+doctype html
+html(lang='en')
+    | !{'{{ partial "head" . }}'}
+    body
+        include ../partials/navbar.pug
+        .main.docs
+            .container
+                .row
+                    .col-sm-3.col-md-3
+                        ul.sidebar-menu
+                            | !{'{{ $currentPage := . }}'}
+                            | !{'{{ range .Site.Menus.docs }}'}
+                            | !{'{{ if .HasChildren }}'}
+                            li.sidebar-menu-item
+                                h3 #{'{{.Name}}'}
+                                ul.sidebar-menu-sub
+                                    | !{'{{range .Children}}'}
+                                    | !{'{{ $has := $currentPage.IsMenuCurrent "docs" . }}'}
+                                    li.sidebar-menu-sub-item(class='{{if $has}}active{{end}}')
+                                        a(href="{{.URL}}") #{'{{.Name}}'}
+                                    | !{'{{if $has}}'}
+                                    .side-bar-menu-toc
+                                        span #{'{{ $currentPage.TableOfContents}}'}
+                                    | !{'{{end}}'}
+                                    | !{'{{end}}'}
+                            | !{'{{else}}'}
+                            li.sidebar-menu-item
+                                h3 #{'{{.Name}}'}
+                            | !{'{{end}}'}
+                            | !{'{{end}}'}
 
-                .col-sm-9.col-md-9
-                    .markdown.py-3
-                        h1 #{'{{ .Title }}'}
-                        span #{'{{.Content}}'}
+                    .col-sm-9.col-md-9
+                        .markdown.py-3
+                            h1 #{'{{ .Title }}'}
+                            span #{'{{.Content}}'}
 
-                    span
-                      | !{' {{if .PrevInSection}} '}
-                      h5.text-left
-                        a(href='{{.PrevInSection.Permalink}}') Next: #{'{{.PrevInSection.Title }} '}
-                      | !{'{{end}}'}
-                    hr.my-4
-                    include ../partials/last-updated.pug
-include ../partials/footer.pug
+                        span
+                          | !{' {{if .PrevInSection}} '}
+                          h5.text-left
+                            a(href='{{.PrevInSection.Permalink}}') Next: #{'{{.PrevInSection.Title }} '}
+                          | !{'{{end}}'}
+                        hr.my-4
+                        include ../partials/last-updated.pug
+        include ../partials/footer.pug
 
