--- a/src/layouts/partials/free-trial-row.pug
+++ b/src/layouts/partials/free-trial-row.pug
@@ -5,7 +5,7 @@ section.free-trial-section
                 .card
                     .card-block
                         .text-center
-                            h2.section-header.pt-4 Try out Checkly for free for 14 days
+                            .section-header.pt-4 Try out Checkly for free for 14 days
                             p.lead-text Start monitoring your API endpoints and browser click flows today.
                             a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
                             .pt-2.text-muted.mb-4
