--- a/src/layouts/product/single.pug
+++ b/src/layouts/product/single.pug
@@ -1,9 +1,11 @@
-include  ../partials/head
-body
-  include ../partials/navbar.pug
-  .main.container.pt-5
-    .row
-      .col-sm-12
-        span.product.markdown #{'{{.Content}}'}
-  include ../partials/free-trial-row.pug
-  include ../partials/footer.pug
+doctype html
+html(lang='en')
+  | !{'{{ partial "head" . }}'}
+  body
+    include ../partials/navbar.pug
+    .main.container.pt-5
+      .row
+        .col-sm-12
+          span.product.markdown #{'{{.Content}}'}
+    include ../partials/free-trial-row.pug
+    include ../partials/footer.pug
