--- a/src/layouts/whats-new/list.pug
+++ b/src/layouts/whats-new/list.pug
@@ -1,26 +1,28 @@
-include  ../partials/head
-body
-    include ../partials/navbar.pug
-    .main
-        .alert-info-pattern.mb-5
-            .container
+doctype html
+html(lang='en')
+    | !{'{{ partial "head" . }}'}
+    body
+        include ../partials/navbar.pug
+        .main
+            .alert-info-pattern.mb-5
+                .container
+                    .row
+                        .col-sm-12.col-md-8.offset-md-2
+                            h1.py-5.mb-0.font-weight-normal News & product updates
+            .container.mb-5
                 .row
                     .col-sm-12.col-md-8.offset-md-2
-                        h1.py-5.mb-0.font-weight-normal News & product updates
-        .container.mb-5
-            .row
-                .col-sm-12.col-md-8.offset-md-2
-                    | !{'{{ range first 10 .Data.Pages }}'}
-                    article.article
-                        .article-header
-                            a(href="{{.RelPermalink}}")
-                                h2.article-title #{'{{ .Title }}'}
-                            .article-sub posted by #{'{{ .Params.Author }}'} on #{'{{ .PublishDate.Format '} "January 2, 2006" #{' }}'}
-                        .article-body
-                            span.markdown #{'{{ .Summary | markdownify }}'}
-                            | !{'{{if .Truncated}}'}
-                            a(href="{{.RelPermalink}}") Read more...
-                            | !{'{{end}}'}
-                    | !{'{{end}}'}
+                        | !{'{{ range first 10 .Data.Pages }}'}
+                        article.article
+                            .article-header
+                                a(href="{{.RelPermalink}}")
+                                    h2.article-title #{'{{ .Title }}'}
+                                .article-sub posted by #{'{{ .Params.Author }}'} on #{'{{ .PublishDate.Format '} "January 2, 2006" #{' }}'}
+                            .article-body
+                                span.markdown #{'{{ .Summary | markdownify }}'}
+                                | !{'{{if .Truncated}}'}
+                                a(href="{{.RelPermalink}}") Read more...
+                                | !{'{{end}}'}
+                        | !{'{{end}}'}
 
-    include ../partials/footer.pug
+        include ../partials/footer.pug
