--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,9 @@
 @import 'blog';
 @import 'product';
 @import 'promo-banner';
-@import 'social-share';
+@import 'share-list';
+@import 'mailchimp-signup-row';
+@import 'more-like-this';
 
 @import 'sections/hero';
 @import 'sections/api-monitoring';
