--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -15,6 +15,7 @@
   <meta name="msvalidate.01" content="36F243A91FAA24DE468D8A8EECF33554" />
   <link rel="icon" type="image/png" href="/images/racoon_favicon.png" />
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
   <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
   <link rel="canonical" href="{{ .Permalink }}" />
   <!-- main styles-->
@@ -78,4 +79,5 @@
       }
     {{ end }}
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 </head>
