--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -88,6 +88,24 @@
       }
     }
   }
+
+  .search-wrapper {
+    i {
+      position: absolute;
+      z-index: 2;
+      display: block;
+      width: 2.375rem;
+      height: 2.375rem;
+      line-height: 2.375rem;
+      text-align: center;
+      pointer-events: none;
+      color: #aab4c6;
+    }
+
+    input {
+      padding-left: 2rem;
+    }
+  }
 }
 
 .home-nav-wrapper {
