feat: move blog

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -20,7 +20,7 @@
   <link rel="canonical" href="{{ .Permalink }}" />
   <!-- main styles-->
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
+  <script async src="https://cdn.cookielaw.org/consent/e4c8a868-c0ad-4c0c-b61e-f6eb6cad2810.js" type="text/javascript" charset="UTF-8"></script>
   <script type="text/javascript">
     function OptanonWrapper() {}
   </script>
@@ -38,8 +38,8 @@
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics-->
-  <script type="text/plain" async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1" class="optanon-category-2"></script>
-  <script type="text/plain" class="optanon-category-2">
+  <script type="text/plain" async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1" class="optanon-category-2"></script>
+  <script type="text/plain" async class="optanon-category-2">
     window.dataLayer = window.dataLayer || [];
 
     function gtag() {
@@ -49,7 +49,7 @@
     gtag('config', 'UA-110523681-1');
   </script>
   <!-- Drift code-->
-  <script type="text/plain" class="optanon-category-2">
+  <script type="text/plain" async class="optanon-category-2">
     {{ if ne .Section "blog" }}
       if (location.host === 'checklyhq.com') {
         !(function() {
@@ -79,5 +79,5 @@
       }
     {{ end }}
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 </head>
