--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -26,7 +26,7 @@ footer.footer
                         li
                             a(href='https://headwayapp.co/checkly-updates', target='_blank') News
                         li
-                            a(href='/blog') Blog
+                            a(href='https://blog.checklyhq.com/', target='_blank') Blog
                         li
                             a(href='/support') Support
                         li
