--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -18,7 +18,7 @@ nav.navbar.navbar-toggleable-md.fixed-top
             li.nav-item
               a.nav-link(href='/docs') Docs
             li.nav-item
-              a.nav-link(href='/blog') Blog
+              a.nav-link(href='https://blog.checklyhq.com', target='_blank') Blog
           span
             | !{'{{ if eq .Section "docs" }} '}
             form.form-inline.search-wrapper
