--- a/src/scss/checkly-webapp-src/style/fonts/fonts.scss
+++ b/src/scss/checkly-webapp-src/style/fonts/fonts.scss
@@ -4,6 +4,7 @@
   url("../fonts/fakt/FaktSoftPro-Blond.woff") format("woff");
   font-weight: 300;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
   url("../fonts/fakt/FaktSoftPro-Normal.woff") format("woff");
   font-weight: 400;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
   url("../fonts/fakt/FaktSoftPro-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -27,4 +30,5 @@
   src: url('../fonts/Source_Code_Pro/SourceCodePro-Regular.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: auto;
 }
