feat: adds alerting product page

--- a/site/layouts/shortcodes/sm-4-col-item.html
+++ b/site/layouts/shortcodes/sm-4-col-item.html
@@ -1,6 +1,6 @@
 {{ $header := .Get 0 }}
 {{ $body := .Get 1 }}
 <div class="col-sm-4 mb-lg-3">
-	<h5>{{$header}}</h5>
+	<h5 class="add-star-before">{{$header}}</h5>
 	<p>{{$body}}</p>
 </div>
