--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -30,7 +30,7 @@ html(lang='en')
                             | !{'{{end}}'}
 
                     .col-sm-9.col-md-9
-                        .markdown.py-3
+                        .markdown.py-3.docs-page
                             h1 #{'{{ .Title }}'}
                             span #{'{{.Content}}'}
 
