--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -10,9 +10,10 @@ nav.navbar.navbar-toggleable-md.fixed-top
           ul.navbar-nav.ml-auto
             li.nav-item.dropdown
               a.nav-link.dropdown-toggle(data-toggle='dropdown', id='navbarDropdownMenuLink', href='#') Product
-              .dropdown-menu.big-drop-shadow
+              .dropdown-menu.big-drop-shadow.product-dropdown
                 a.dropdown-item(href='/product/api-monitoring/') API Monitoring
                 a.dropdown-item(href='/product/transaction-monitoring/') Site Transaction Monitoring
+                a.dropdown-item(href='/product/alerting/') Alerting
             li.nav-item
               a.nav-link(href='/pricing') Pricing
             li.nav-item
