--- a/src/layouts/partials/scripts.pug
+++ b/src/layouts/partials/scripts.pug
@@ -11,7 +11,7 @@ span
       indexName: 'checkly_docs',
       appId: 'LCMJSZN73Z',
       inputSelector: '#search',
-      debug: false,
+      debug: false
     })
   | !{'{{end}}'}
 
