--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -29,7 +29,12 @@
         border-bottom: 0;
       }
       &::before {
-        content: none !important;
+        content: "\f121" !important;
+        color: $green;
+        font-family: Ionicons;
+        position: relative;
+        font-size: 1rem;
+        top: -3px
       }
     }
 
@@ -37,6 +42,14 @@
       font-size: .8rem;
       text-transform: uppercase;
       font-weight: $font-weight-bold;
+      &::before {
+        content: "\f4b3" !important;
+        color: $yellow;
+        padding-right: .5rem;
+        font-family: Ionicons;
+        position: relative;
+        font-size: inherit;
+      }
     }
 
     p {
