--- a/site/layouts/shortcodes/feature-row.html
+++ b/site/layouts/shortcodes/feature-row.html
@@ -1,11 +1,13 @@
 {{ $header := .Get "header" }}
 {{ $image := .Get "img" }}
-<div class="row py-4">
-	<div class="col-sm-4">
-		<h3 class="section-header mt-0 pb-0">{{$header}}</h3>
-		<p>{{.Inner}}</p>
+<div class="row pt-4 pb-5">
+	<div class="col-sm-4 text-left d-flex">
+		<div class="feature-row-item-wrapper my-auto">
+			<h3 class="section-header mt-0 pb-0">{{$header}}</h3>
+			<p>{{.Inner}}</p>
+		</div>
 	</div>
-	<div class="col-sm-8">
-		<img src="{{$image}}" alt="{{$header}}">
+	<div class="col-sm-8 text-right">
+		<img src="{{$image}}" alt="{{$header}}" class="img-w720 big-drop-shadow rounded">
 	</div>
 </div>
