feat: adds commented out supplypike testimonial

--- a/src/layouts/partials/testimonial-trial-row.pug
+++ b/src/layouts/partials/testimonial-trial-row.pug
@@ -19,17 +19,17 @@ section.testimonial-section.testimonial-1
       //.col-sm-4.col-md-5.col-lg-4
       //  .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
       //    .card-block
-      //      a(href='https://www.bizmachine.com/', target='_blank')
-      //        img.testimonial-logo(src='/images/testimonials/bizmachine_logo.png')
+      //      a(href='https://supplypike.com', target='_blank')
+      //        img.testimonial-logo(src='/images/testimonials/supplypike_logo.png')
       //      p.testimonial-text
-      //        | "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      //        | dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. "
+      //        | "Checkly helps our teams to ship code more confidently and guide data-driven decision making.
+      //        | Integrations with tools like Prometheus and PagerDuty make the adoption seamless."
       //      .testimonial-portrait
-      //        img(src='/images/testimonials/bizmachine_portrait.png')
+      //        img(src='/images/testimonials/supplypike_portrait.png')
       //      .testimonial-name-badge
-      //        .text-muted.font-weight-bold Lukáš Bauer
-      //        .text-muted Head of Technology
-      //        a.text-muted(href='https://www.bizmachine.com/' target='_blank') bizmachine.com
+      //        .text-muted.font-weight-bold Kanat Bekterimov
+      //        .text-muted Software Engineer Manager
+      //        a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.com
       //.col-sm-4.col-md-5.col-lg-4
       //  .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
       //    .card-block
