feat: set live new testimonial supplypike

--- a/src/layouts/partials/testimonial-trial-row.pug
+++ b/src/layouts/partials/testimonial-trial-row.pug
@@ -1,7 +1,7 @@
 section.testimonial-section.testimonial-1
   .container
     .row
-      .col-sm-4.col-md-5.col-lg-4
+      .col-sm-12.col-md-4
         .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
           .card-block
             a(href='http://www.insiteintelligence.com/', target='_blank')
@@ -16,35 +16,21 @@ section.testimonial-section.testimonial-1
               .text-muted IT & Systems Lead
               a.text-muted(href='http://www.insiteintelligence.com/' target='_blank') insiteintelligence.com
 
-      //.col-sm-4.col-md-5.col-lg-4
-      //  .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
-      //    .card-block
-      //      a(href='https://supplypike.com', target='_blank')
-      //        img.testimonial-logo(src='/images/testimonials/supplypike_logo.png')
-      //      p.testimonial-text
-      //        | "Checkly helps our teams to ship code more confidently and guide data-driven decision making.
-      //        | Integrations with tools like Prometheus and PagerDuty make the adoption seamless."
-      //      .testimonial-portrait
-      //        img(src='/images/testimonials/supplypike_portrait.png')
-      //      .testimonial-name-badge
-      //        .text-muted.font-weight-bold Kanat Bekterimov
-      //        .text-muted Software Engineer Manager
-      //        a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.com
-      //.col-sm-4.col-md-5.col-lg-4
-      //  .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
-      //    .card-block
-      //      a(href='https://launchpotato.com/', target='_blank')
-      //        img.testimonial-logo(src='/images/testimonials/launchpotato_logo.png')
-      //      p.testimonial-text
-      //        | "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      //        | dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. "
-      //      .testimonial-portrait
-      //        img(src='/images/testimonials/anonymous_logo.png')
-      //      .testimonial-name-badge
-      //        .text-muted.font-weight-bold Nick Caldwell
-      //        .text-muted Software Engineer
-      //        a.text-muted(href='https://launchpotato.com/' target='_blank') launchpotato.com
-      .col-sm-8.col-md-7.col-lg-8
+      .col-sm-12.col-md-4
+        .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
+          .card-block
+            a(href='https://supplypike.com', target='_blank')
+              img.testimonial-logo(src='/images/testimonials/supplypike_logo.png')
+            p.testimonial-text
+              | "Checkly helps our teams to ship code more confidently and guide data-driven decision making.
+              | Integrations with tools like Prometheus and PagerDuty make the adoption seamless."
+            .testimonial-portrait
+              img(src='/images/testimonials/supplypike_portrait.png')
+            .testimonial-name-badge
+              .text-muted.font-weight-bold Kanat Bekterimov
+              .text-muted Software Engineer Manager
+              a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.com
+      .col-sm-12.col-md-4
         .text-left.p-4
           h2.section-header.pt-4 Try it out for free for 14 days 🍍
           p.lead-text Start actively monitoring your API endpoints and browser click flows today.
