--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -6,7 +6,7 @@
   &.testimonial-1 {
     .testimonial-card {
       border: none;
-      height: 354px;
+      max-height: 354px;
       .card-block {
         padding: 2 * $spacer;
       }
@@ -16,7 +16,7 @@
       margin-bottom: 1rem;
     }
     .testimonial-text {
-      height: 160px;
+      max-height: 160px;
       font-size: $font-size-base;
       color: $gray-dark;
       font-weight: 300;
