feat: update pricing table with dashboards volume

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -26,6 +26,7 @@ html(lang='en')
                   .pt-list-item API checks
                   .pt-list-item Browser checks
                   .pt-list-item Check interval
+                  .pt-list-item Public dashboards
                   .pt-list-item Team members
                   .pt-list-item
                     span.pt-tooltip-show-text
@@ -34,7 +35,6 @@ html(lang='en')
                         span.pt-tooltip-content
                           | Choose up to eight simultaneous check locations for API checks and up to four locations for browser checks
                   .pt-list-item SSL Monitoring
-                  .pt-list-item Public dashboard
                   .pt-list-item
                     | Email, Slack & webhooks
                   .pt-list-item
@@ -102,6 +102,10 @@ html(lang='en')
                               span.pt-tooltip-content
                                | API checks can be scheduled every minute, browser checks every 10 min.
                       .pt-list-item
+                        .pt-text Public dashboards
+                        .pt-value
+                          | 1
+                      .pt-list-item
                         .pt-text
                           | Team members
                         .pt-value
@@ -113,10 +117,6 @@ html(lang='en')
                           | 16
                       .pt-list-item
                         .pt-text SSL monitoring
-                        .pt-value
-                          i.ion-checkmark-round
-                      .pt-list-item
-                        .pt-text Public dashboard
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
@@ -194,6 +194,10 @@ html(lang='en')
                               span.pt-tooltip-content
                                 | API checks can be scheduled every minute, browser checks every 10 min
                       .pt-list-item
+                        .pt-text Public dashboard
+                        .pt-value
+                          | 3
+                      .pt-list-item
                         .pt-text
                           | Team members
                         .pt-value
@@ -205,10 +209,6 @@ html(lang='en')
                           | 16
                       .pt-list-item
                         .pt-text SSL monitoring
-                        .pt-value
-                          i.ion-checkmark-round
-                      .pt-list-item
-                        .pt-text Public dashboard
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
@@ -287,6 +287,10 @@ html(lang='en')
                               span.pt-tooltip-content
                                 | API checks can be scheduled every minute, browser checks every 10 min
                       .pt-list-item
+                        .pt-text Public dashboard
+                        .pt-value
+                          | 5
+                      .pt-list-item
                         .pt-text
                           | Team members
                         .pt-value
@@ -298,10 +302,6 @@ html(lang='en')
                           | 16
                       .pt-list-item
                         .pt-text SSL monitoring
-                        .pt-value
-                          i.ion-checkmark-round
-                      .pt-list-item
-                        .pt-text Public dashboard
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
@@ -380,6 +380,10 @@ html(lang='en')
                               span.pt-tooltip-content
                                 | API checks can be scheduled every minute, browser checks every 5 min
                       .pt-list-item
+                        .pt-text Public dashboard
+                        .pt-value
+                          | 10
+                      .pt-list-item
                         .pt-text
                           | Team members
                         .pt-value
@@ -391,10 +395,6 @@ html(lang='en')
                           | 16
                       .pt-list-item
                         .pt-text SSL monitoring
-                        .pt-value
-                          i.ion-checkmark-round
-                      .pt-list-item
-                        .pt-text Public dashboard
                         .pt-value
                           i.ion-checkmark-round
                       .pt-list-item
