feat: adds lyfegen testimonial

--- a/src/layouts/partials/testimonial-trial-row.pug
+++ b/src/layouts/partials/testimonial-trial-row.pug
@@ -30,11 +30,18 @@ section.testimonial-section.testimonial-1
               .text-muted.font-weight-bold Kanat Bekterimov
               .text-muted Software Engineer Manager
               a.text-muted(href='https://supplypike.com/' target='_blank') supplypike.com
+
       .col-sm-12.col-md-4
-        .text-left.p-4
-          h2.section-header.pt-4 Try it out for free for 14 days 🍍
-          p.lead-text Start actively monitoring your API endpoints and browser click flows today.
-          a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
-          .pt-2.text-muted.mb-4
-            small no credit card required
+        .card.testimonial-card.big-drop-shadow.mb-5.mb-md-0
+          .card-block
+            a(href='https://lyfegen.com/', target='_blank')
+              img.testimonial-logo(src='/images/testimonials/lyfegen_logo.png')
+            p.testimonial-text
+              | "Checkly feels seamless and responsive. It took me about ten minutes to migrate from Pingdom and StatusPage.io, saving on our monthly monitoring bill."
+            .testimonial-portrait
+              img(src='/images/testimonials/lyfegen_portrait.png')
+            .testimonial-name-badge
+              .text-muted.font-weight-bold James Gannon
+              .text-muted Chief Digital Officer
+              a.text-muted(href='https://lyfegen.com/' target='_blank') lyfegen.com
 
