--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -16,6 +16,7 @@
       margin-bottom: 1rem;
     }
     .testimonial-text {
+      min-height: 160px;
       max-height: 160px;
       font-size: $font-size-base;
       color: $gray-dark;
