feat: adds links to api docs

--- a/src/layouts/docs/list.pug
+++ b/src/layouts/docs/list.pug
@@ -24,7 +24,7 @@ html(lang='en')
                               h3 #{'{{.Name}}'}
                           | !{'{{end}}'}
                           | !{'{{end}}'}
-
+                          a.api-reference-link(href='/docs/api' target='_blank') API reference
                   .col-sm-9
                     .markdown.py-3
                       h1 #{'{{ .Title }}'}
