--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -17,6 +17,8 @@ footer.footer
                         li
                             a(href='/docs') Docs
                         li
+                            a(href='/docs/api') API reference
+                        li
                             a(href='https://status.checklyhq.com/' target='_blank') Live dashboard
                             span.green-dot
             .col-sm-2
