--- a/src/layouts/docs/single.pug
+++ b/src/layouts/docs/single.pug
@@ -28,7 +28,7 @@ html(lang='en')
                                 h3 #{'{{.Name}}'}
                             | !{'{{end}}'}
                             | !{'{{end}}'}
-
+                            a.api-reference-link(href='/docs/api' target='_blank') API reference
                     .col-sm-9.col-md-9
                         .markdown.py-3.docs-page
                             h1 #{'{{ .Title }}'}
