feat: adds reddit tracking code

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -79,5 +79,13 @@
       }
     {{ end }}
   </script>
+
+  <!-- Reddit Conversion Pixel -->
+  <script type="text/plain" async class="optanon-category-2">
+    !function(w,d){if(!w.rdt){var p=w.rdt=function(){p.sendEvent?p.sendEvent.apply(p,arguments):p.callQueue.push(arguments)};p.callQueue=[];var t=d.createElement("script");t.src="https://www.redditstatic.com/ads/pixel.js",t.async=!0;var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(t,s)}}(window,document);rdt('init','t2_3og4himk');rdt('track', 'PageVisit');
+  </script>
+  <!-- End Reddit Conversion Pixel -->
+
+
   <script async src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 </head>
