--- a/src/layouts/docs/list.pug
+++ b/src/layouts/docs/list.pug
@@ -25,6 +25,7 @@ html(lang='en')
                           | !{'{{end}}'}
                           | !{'{{end}}'}
                           a.api-reference-link(href='/docs/api' target='_blank') API reference
+                            .badge.badge-accent.badge-sm.ml-2 beta
                   .col-sm-9
                     .markdown.py-3
                       h1 #{'{{ .Title }}'}
