--- a/src/layouts/partials/api-monitoring-section.pug
+++ b/src/layouts/partials/api-monitoring-section.pug
@@ -6,10 +6,10 @@ section.api-monitoring-section
           h2.section-super-header api monitoring
           h3.section-header No more broken APIs
           p.lead-text
-            | Make sure your API is always responds quickly and with the correct payload. Get started quickly
+            | Make sure your API always responds quickly and with the correct payload. Get started
             | with our Swagger or cURL importer and super easy API monitor creator.
             | <br><br>
-            | Monitor your API performance from up to 8 locations, as often as once every minute. And we'll also check if
+            | Monitor your API performance from 16 different locations, as often as once every minute. We'll also check if
             | your SSL certificate is about to expire.
           a.cta-link(href='/product/api-monitoring/') Learn more
       .col-sm-6.offset-sm-1
