--- a/src/layouts/partials/site-monitoring-section.pug
+++ b/src/layouts/partials/site-monitoring-section.pug
@@ -9,7 +9,7 @@ section.site-monitoring-section
             | Monitor and validate your most crucial site transactions like logins, shopping carts and onboarding
             | flows. Take screenshots to get instant insights into what's working and what's not.
             | <br><br>
-            | Scripting browser click flows used to suck. Not anymore. Checkly uses a Google's Puppeteer framework to run your
+            | Scripting browser click flows used to suck. Not anymore. Checkly uses Google's Puppeteer framework to run your
             | flows in a Chrome browser.
           a.cta-link(href='/product/transaction-monitoring/') Learn more
       .col-sm-6.offset-sm-1
